--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "requires": true,
   "lockfileVersion": 1,
   "dependencies": {
+    "js-sha256": "^0.9.0",
     "typescript": {
-      "version": "4.2.4",
-      "resolved": "https://registry.npmjs.org/typescript/-/typescript-4.2.4.tgz",
+      "dev": true,
       "integrity": "sha512-V+evlYHZnQkaz8TRBuxTA92yZBPotr5H+WhQ7bD3hZUndx5tGOa1fuCgeSjxAzM1RiN5IzvadIXTVefuuwZCRg==",
-      "dev": true
+      "resolved": "https://registry.npmjs.org/typescript/-/typescript-4.2.4.tgz",
+      "version": "4.2.4"
     }
   },
   "devDependencies": {
