--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "requires": true,
   "lockfileVersion": 1,
   "dependencies": {
-    "js-sha256": "^0.9.0",
-    "typescript": {
-      "dev": true,
-      "integrity": "sha512-V+evlYHZnQkaz8TRBuxTA92yZBPotr5H+WhQ7bD3hZUndx5tGOa1fuCgeSjxAzM1RiN5IzvadIXTVefuuwZCRg==",
-      "resolved": "https://registry.npmjs.org/typescript/-/typescript-4.2.4.tgz",
-      "version": "4.2.4"
-    }
+    "js-sha256": "^0.9.0"
   },
   "devDependencies": {
+    "nodemon": "^2.0.7",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.4"
+  },
+  "main": "dist/BLT.js",
+  "types": "dist/BLT.d.ts",
+  "scripts": {
+    "start": "ts-node BLT.ts",
+    "build": "tsc"
   }
 }
